--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
         </div>
 
         <footer>
-            Doxify - Anonymous text sharing platform
+            Doxify - Anonymous dox platform
+            administration - @skyhf
         </footer>
     </div>
 
