--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
         </div>
 
         <footer>
-            Doxify - Anonymous dox platform
-            administration - @skyhf
+            Doxify - Anonymous dox platform\nadministration - @skyhf
         </footer>
     </div>
 
