--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
         </div>
 
         <footer>
-            Doxify - Anonymous dox platform\nadministration - @skyhf
+            Doxify - Anonymous dox platform
         </footer>
+        <h4>administration - @skyhf</h4>
     </div>
 
     <script>
